# gazebo-robotics-lab

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  setup.bash
model/building1/: model.config  model.sdf
model/gripper_base/: model.config  model.sdf
model/hoverboard/: model.config  model.sdf
script/: CMakeLists.txt  custom_msg.h  gripper.cpp  gripper_cmd.cpp  gripper_pid_cfg.cpp  hoverboard.cpp  vel_cmd.cpp  welcome.cpp
script/msgs/: CMakeLists.txt  custom_msg.proto
world/: world2.world
